# agent-loop-orchestrator

./: .env.example  .gitignore  README.md  pyproject.toml
.agent-loop/: config.yaml  history.jsonl  memory.md
.agent-loop/tasks/: fix-readme.yaml
agent/: __init__.py  agent_options.py  api_keys.py  claude_runner.py  codex_runner.py  git_utils.py  hooks.py  log.py  main.py  memory.py  orchestrator.py  permissions.py  policies.py  queue.py  queue_cli.py  report.py  review_gate.py  run_file.py  sdk_runner.py  skills.py  subagents.py  verifier.py
agent/resources/: __init__.py
agent/resources/configs/: __init__.py  default.yaml  subagents.default.yaml
agent/resources/prompts/: __init__.py  implementer.md
configs/: default.yaml  gm-board.yaml  project.example.yaml  subagents.default.yaml
prompts/: fixer.md  implementer.md  planner.md  reviewer.md
tasks/examples/: inspect-character-builder.example.yaml  run-file.example.yaml
tests/: __init__.py  test_api_keys.py  test_checkpoint_commit.py  test_claude_runner.py  test_codex_runner.py  test_config_selection.py  test_git_utils.py  test_git_worktrees.py  test_hooks.py  test_in_place_branch.py  test_main.py  test_memory.py  test_orchestrator_dry_run.py  test_permissions.py  test_policies.py  test_project_context.py  test_queue.py  test_queue_cli.py  test_report.py  test_resume.py  test_review_gate.py  test_run_file.py  test_sdk_runner.py  test_skills.py  test_subagents.py  test_verifier.py
