[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-loop-orchestrator"
version = "0.1.0"
description = "A lightweight external orchestrator skeleton for controlled Claude/Codex loops."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
]

[project.scripts]
agent-loop = "agent.main:main"
agent-queue = "agent.queue_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.setuptools]
packages = ["agent"]
